feat: mentor expertise
