# src/modules/mentorExpertise/dtos/mentorExpertiseDTO.ts
@@ -1,0 +1,5 @@
+export interface MentorExpertiseDTO {
+  id?: string;
+  mentorId: string;
+  expertiseId: string;
+}
